// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`도구 스키마 스냅샷 > xbrush_file_upload 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "file_path": {
      "description": "Absolute path to the local file to upload.",
      "type": "string",
    },
    "strategy": {
      "description": "Upload strategy: 'auto' (default) picks by file size; 'direct' uses /v1/files/upload; 'presign' uses /v1/files/presign + S3.",
      "enum": [
        "auto",
        "direct",
        "presign",
      ],
      "type": "string",
    },
  },
  "required": [
    "file_path",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_get_request 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "request_id": {
      "description": "Request ID (starts with 'req', 24 characters).",
      "minLength": 24,
      "type": "string",
    },
  },
  "required": [
    "request_id",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_image_edit 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "height": {
      "description": "Output height in pixels (256-4096). For outpaint, the target canvas height.",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
    "image_url": {
      "description": "URL of the source image to edit.",
      "format": "uri",
      "type": "string",
    },
    "mask_url": {
      "description": "Mask image URL. White areas = edit, black areas = preserve.",
      "format": "uri",
      "type": "string",
    },
    "mode": {
      "description": "'inpaint' (default) edits the image in place; 'outpaint' extends the canvas using width/height.",
      "enum": [
        "inpaint",
        "outpaint",
      ],
      "type": "string",
    },
    "model": {
      "description": "Image editing model (e.g. qwen-image-edit-re, gemini-2.5-flash-edit).",
      "type": "string",
    },
    "n": {
      "description": "Number of edited images (1-8). Default: 1.",
      "maximum": 8,
      "minimum": 1,
      "type": "integer",
    },
    "prompt": {
      "description": "Text instruction describing the desired edits.",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducible results.",
      "type": "integer",
    },
    "width": {
      "description": "Output width in pixels (256-4096). For outpaint, the target canvas width.",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
  },
  "required": [
    "model",
    "prompt",
    "image_url",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_image_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "height": {
      "description": "Output height in pixels (256-4096). Default: 1024.",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
    "model": {
      "description": "Image model to use (e.g. z-image-turbo, flux-kontext). Use xbrush_list_models to see available models.",
      "type": "string",
    },
    "n": {
      "description": "Number of images to generate (1-8). Default: 1.",
      "maximum": 8,
      "minimum": 1,
      "type": "integer",
    },
    "negative_prompt": {
      "description": "Elements to exclude from the generated image.",
      "type": "string",
    },
    "prompt": {
      "description": "Text description of the image to generate.",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducible results.",
      "type": "integer",
    },
    "width": {
      "description": "Output width in pixels (256-4096). Default: 1024.",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
  },
  "required": [
    "model",
    "prompt",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_list_models 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "category": {
      "description": "Filter by top-level category (image, video, audio). Omit to list all.",
      "enum": [
        "image",
        "video",
        "audio",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_music_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "duration": {
      "description": "Duration in seconds (1-120). Conservative upper bound; may be lifted by server.",
      "maximum": 120,
      "minimum": 1,
      "type": "integer",
    },
    "model": {
      "description": "Music model ID (e.g. lyria2). Optional — server picks a default.",
      "type": "string",
    },
    "negative_prompt": {
      "description": "Styles/elements to exclude from the generated music.",
      "type": "string",
    },
    "prompt": {
      "description": "Text description of the music to generate.",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducibility.",
      "type": "integer",
    },
  },
  "required": [
    "prompt",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_tts_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "language": {
      "description": "Language/locale code (e.g. 'ko', 'en', 'ko-KR').",
      "type": "string",
    },
    "model": {
      "description": "TTS model ID (e.g. speech-2.6-hd, eleven_v3). Optional — server picks a default. Use xbrush_list_models with category='audio'.",
      "type": "string",
    },
    "speed": {
      "description": "Speech rate multiplier (0.5-2.0). Default: 1.0.",
      "maximum": 2,
      "minimum": 0.5,
      "type": "number",
    },
    "text": {
      "description": "Text to synthesize (non-blank).",
      "minLength": 1,
      "type": "string",
    },
    "voice_id": {
      "description": "Voice identifier. See the model's supported voices.",
      "type": "string",
    },
  },
  "required": [
    "text",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_video_lip_sync 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "audio_url": {
      "description": "URL of the audio to lip-sync onto the video.",
      "format": "uri",
      "type": "string",
    },
    "model": {
      "description": "Lip-sync model ID (e.g. pixverse). Defaults to the server's default model.",
      "type": "string",
    },
    "video_url": {
      "description": "URL of the source video (face must be visible).",
      "format": "uri",
      "type": "string",
    },
  },
  "required": [
    "video_url",
    "audio_url",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_watermark_add 1`] = `
{
  "properties": {},
  "type": "object",
}
`;
